# speaches

./: compose.cpu.yaml  compose.cuda-cdi.yaml  compose.cuda.yaml  compose.yaml  pyproject.toml
src/speaches/: hf_utils.py  main.py
src/speaches/executors/: whisper.py
